syntax ="proto3";

package pb;

option go_package = ".";


service Coordinator {
    rpc AvailablePackages(View) returns (PackagesResponse);
    rpc CoordinatorViewPackage(View)returns(Package);
    rpc CoordinatorViewFoodMenu(View)returns(FoodMenus);
    rpc CoordinatorViewDestination(View)returns(Destination);
    rpc CoordinatorViewActivity(View)returns(Activity);
    rpc Viewcategories(View)returns(Categories);
    rpc PackageSearch(Search)returns(PackagesResponse);
    rpc UserTravellerDetails(TravellerRequest)returns(TravellerResponse);
    rpc OfflineBooking(Booking)returns(BookingResponse);
    rpc OnlinePayment(Booking)returns(OnlinePaymentResponse);
    rpc FilterPackage(Filter)returns(PackagesResponse);
    rpc PaymentConfirmed(PaymentConfirmedRequest)returns(BookingResponse);
    rpc ViewHistory(View)returns(Histories);
    rpc ViewBooking(View)returns(History);
    rpc CancelBooking(View)returns(Response);
}

message Response{
    string Status = 1;
    string Message = 2;
    int64 ID = 3;
    int64 Amount = 4;
}

message Histories{
    repeated History History = 1;
}

message History{
    int64 ID = 1;
    string Payment_Mode = 2;
    string Booking_Status = 3;
    string Cancelled_Status = 4;
    int64 Total_Price = 5;
    int64 User_ID = 6;
    string Booking_ID = 7;
    string Book_Date = 8;
    string Start_Date = 9;
    repeated TravellerDetails Travellers = 10;
    int64 Paid_Amount = 11;
}

message FoodMenus{
    repeated FoodMenu FoodMenus = 1;
}

message FoodMenu {
    int64 Food_Menu_ID = 1;
    int64 Package_ID = 2;
    string Breakfast = 3;
    string Lunch = 4;
    string Dinner = 5;  
    string Date = 6;  
}

message PaymentConfirmedRequest{
    string Email = 1;
    string Reference_ID = 2;
    string Payment_ID = 3;
    string User_ID = 4;
    string Order_ID = 5;
    string Signature = 6;
    string Total = 7;
}

message Filter {
    int64 Page = 1;
    string Departure_Time = 2;
    int64 Min_Price = 3;
    int64 Max_Price = 4;
    int64 Category_ID = 5;
    string Order_By = 6;
    bool Status = 7;
}

message OnlinePaymentResponse {
    int32 User_ID = 1;
    float Total_Fare = 2;
    string Booking_Reference = 3;
    string Email = 4;
    string Order_ID = 5;
}

message BookingResponse{
    string Status = 1;
    string Booking_ID = 2;
}

message Booking{
    string Ref_ID = 1;
    int64 User_ID = 2;
    string Typ = 3;
}

message TravellerResponse {
    string Status = 1;
    int64 Package_Price = 2;
    int64 Activity_Total_Price = 3;
    int64 Total_Price = 4;
    int64 Advance_Amount = 5;
    string Ref_ID = 6;
}

message TravellerDetails {
    string Name = 1;
    string Age = 2;
    string Gender = 3;
    repeated string Activity_ID = 4;
}
  
message TravellerRequest {
    repeated TravellerDetails Traveller_Details = 1;
    string User_ID = 2;
    string Package_ID = 3;
    string Email = 4;
    string Username = 5;
}

message Search{
    int64 Category_ID = 1;
    int64 Traveler_Count = 2;
    string Pickup_Place = 3;
    string Final_Destination = 4;
    string Date = 5;
    int64 Page = 6;
    string End_Date = 7;
    int64 Max_Destination = 8;
    repeated string Destination = 9;
}

message Categories{
    repeated Category Categories = 1;
}

message View{
    int64 ID = 1;
    string Status = 2;
    int64 Page = 3;
}

message PackagesResponse{
    repeated Package Packages = 1;
}

message Category{
    int64 Category_ID = 1;
    string Category_Name = 2;
}

message Package{
    int64 Package_ID = 1;
    string Packagename = 2;
    int64 Coordinator_ID = 3;
    string Start_Location = 4;
    int64 Available_Space = 5;
    string Start_Date = 6;
    string Start_Time = 7;
    string End_Date = 8;
    int64 Price = 9;
    string Image = 10;
    int64 Destination_Count = 11;
    string Destination = 12;
    string Description = 13;
    int64 Max_Capacity = 14;
    int64 Category_ID = 15;  
    Category Category = 16;
    repeated Destination Destinations = 17;
}

message Destination{
    int64 Destination_ID = 1;
    string Destination_Name = 2;
    string Description = 3;
    int64 Min_Price = 4;
    int64 Max_Capacity = 5;
    string Image = 6;
    repeated Activity Activity = 7;
    int64 Package_ID = 8;
}

message Activity{
    int64 Activity_ID = 1;
    string Activity_Name = 2;
    string Description = 3;
    string Location = 4;
    string Activity_Type = 5;
    int64 Amount = 6;
    string Date = 7;
    string Time = 8;
    int64 Destination_ID = 9;
}
